specify connection string in data-test

--- a/docker-compose.data.tests.yml
+++ b/docker-compose.data.tests.yml
@@ -11,6 +11,8 @@ services:
       - test-data
     depends_on:
       - mariadb
+    environment:
+      ConnectionStrings__FilterListsConnection: "Server=mariadb;Database=filterlists;Uid=filterlists;Pwd=filterlists;"
 
   mariadb:
     image: mariadb:10
