use default aspnet port

--- a/src/FilterLists.Api/Dockerfile
+++ b/src/FilterLists.Api/Dockerfile
@@ -4,9 +4,7 @@
 # init base
 FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-alpine as base
 WORKDIR /app
-ENV DataDirectory__Path "data"
-ENV ASPNETCORE_URLS "http://*:5000"
-EXPOSE 5000
+EXPOSE 80
 ENTRYPOINT ["dotnet", "FilterLists.Api.dll"]
 
 # init build
@@ -28,12 +26,6 @@ WORKDIR /app/src/FilterLists.Api
 COPY src/FilterLists.Api/. .
 RUN dotnet build -c Release --no-restore
 
-# init Data.Tests
-FROM build AS test-data
-COPY data/. data/
-WORKDIR /app/src/FilterLists.Data
-ENTRYPOINT ["dotnet", "ef", "migrations", "--startup-project", "../FilterLists.Api", "add"]
-
 # init Services.Tests
 FROM build AS test-services
 ENTRYPOINT ["dotnet", "test"]
@@ -47,8 +39,15 @@ RUN dotnet restore
 COPY tests/FilterLists.Services.Tests/. .
 RUN dotnet build -c Release --no-restore
 
+# init data migration test
+FROM build AS test-data
+COPY data/. data/
+WORKDIR /app/src/FilterLists.Data
+ENTRYPOINT ["dotnet", "ef", "migrations", "--startup-project", "../FilterLists.Api", "add"]
+
 # publish
-FROM build AS publish
+FROM test-data AS publish
+WORKDIR /app/src/FilterLists.Api
 RUN dotnet publish -c Release -o out --no-restore --no-build
 
 # final
